src/main/default/objects/BP_CollectionItem__c/BP_CollectionItem__c.object-meta.xml
<CustomObject>
    <label>Collection Item</label>
    <nameField>
        <label>Collection Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>