src/main/default/objects/BP_CollectionItem__c/fields/BP_ConditionDetails__c.field-meta.xml
<CustomField>
    <fullName>BP_ConditionDetails__c</fullName>
    <label>Condition Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>