src/main/default/objects/BP_CollectionItem__c/fields/BP_Game__c.field-meta.xml
<CustomField>
    <fullName>BP_Game__c</fullName>
    <label>Game</label>
    <referenceTo>BP_Game__c</referenceTo>
    <relationshipLabel>Collection Items</relationshipLabel>
    <relationshipName>Collection_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>