src/main/default/objects/BP_CollectionItem__c/fields/BP_GameCondition__c.field-meta.xml
<CustomField>
    <fullName>BP_GameCondition__c</fullName>
    <label>Game Condition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>