src/main/default/objects/BP_CollectionItem__c/fields/BP_GameLookup__c.field-meta.xml
<CustomField>
    <fullName>BP_GameLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game</label>
    <referenceTo>BP_Game__c</referenceTo>
    <relationshipLabel>Collection Items (Game)</relationshipLabel>
    <relationshipName>Collection_Items_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>