src/main/default/objects/BP_CollectionItem__c/fields/BP_NumberOfPlays__c.field-meta.xml
<CustomField>
    <fullName>BP_NumberOfPlays__c</fullName>
    <label>Number of Plays</label>
    <summaryForeignKey>BP_Gameplay__c.BP_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>