src/main/default/objects/BP_CollectionItem__c/fields/BP_Owner__c.field-meta.xml
<CustomField>
    <fullName>BP_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Collection Items</relationshipLabel>
    <relationshipName>Collection_Items</relationshipName>
    <type>Lookup</type>
</CustomField>