src/main/default/objects/BP_CollectionItem__c/fields/BP_PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>BP_PurchaseDate__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>