src/main/default/objects/BP_CollectionItem__c/listViews/BP_MyCollection.listView-meta.xml
<ListView>
    <fullName>BP_MyCollection</fullName>
    <columns>NAME</columns>
    <columns>BP_Game__c</columns>
    <columns>BP_NumberOfPlays__c</columns>
    <columns>BP_GameCondition__c</columns>
    <columns>BP_PurchaseDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Collection</label>
</ListView>